# django-request-counter

./: README.md  apps.py  middlewares.py  pyproject.toml  setup.cfg  setup.py  urls.py  views.py
management/commands/: store_api_count.py
request_counter/: middlewares.py  models.py  urls.py  views.py
request_counter/management/commands/: store_api_count.py
request_counter/migrations/: 0001_initial.py
